@@ -230,3 +230,6 @@ VDR Plugin 'dbus2vdr' Revision History
 
 2013-05-29: Version 11
 - complete rewrite, now using GIO/GDBus
+
+2013-07-10: Version 14
+- add method "IsReplaying" to status interface
